Style cards, add fonts, fix header fonts and spacing

--- a/styles.css
+++ b/styles.css
@@ -48,30 +48,49 @@ table {
 }
 /* End CSS Reset */
 
+:root {
+	--main-highlight-color: #299ddb;
+	--main-page-color: #efefef;
+	--main-font-color: #5f5f5f;
+  }
 
 * {
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-	font-family: "Helvetica", serif;
-  }
+	font-family: 'Roboto', sans-serif;
+}
 
 
-  a {
-	color: inherit;
+a {
+	color: var(--main-font-color);
+	font-size: 14px;
 	text-decoration: none;
+}
+
+h1 {
+	color: white;
+	padding: 15px;
+	font-size: 42px;
+	font-family: 'Oswald', sans-serif;
+	font-weight: 500;
+	letter-spacing: 2px;
   }
 
+h2 {
+	color: var(--main-font-color);
+	font-size: 24px;
+	letter-spacing: 1.5px;
+	margin-bottom: 15px;
+}
 
-  ul {
-	list-style: none;
-  }
+h3 {
+	font-family: "Oswald", sans-serif;
+	font-size: 20px;
+	margin-bottom: 6px;
+}
 
 /* header/nav */
 
-
-*{
-	border: 1px solid blue;
-}
 
 .header-all {
 	background-color: #2b2b2b;
@@ -82,7 +101,7 @@ table {
 	-webkit-box-direction: normal;
 	-ms-flex-direction: column;
 	flex-direction: column;
-  }
+}
 
 .header-login {
 	display: -webkit-box;
@@ -98,7 +117,7 @@ table {
 	font-size: 24px;
 	padding-right: 5px;
 	color: #c2c2c2;
-  }
+}
 
 .user-drop-down {
     display: -webkit-box;
@@ -109,14 +128,15 @@ table {
 	justify-content: center;
 	-webkit-box-align: center;
 	-ms-flex-align: center;
-	align-items: center;
-  }
+	align-items: flex-end;
+}
 
 select {
 	background-color: transparent;
 	color: #299ddb;
 	border: none;
-  }
+	font-size: 16px;
+}
 
 .header-nav {
   display: -webkit-box;
@@ -127,64 +147,150 @@ select {
   justify-content: space-between;
 }
 
-h1 {
-  color: white;
-  padding: 15px;
-  font-size: 42px;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-weight: bold;
-}
-
 .header-links {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
 	height: 100%;
-  }
+}
 
 .header-shares,
 .header-sort,
 .header-account {
-	color: #8a8a8a;
-	padding: 0px 15px 15px;
+	font-family: 'Roboto', sans-serif; 
+	color: var(--main-highlight-color);
+	padding: 0px 10px 15px;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-align: end;
 	-ms-flex-align: end;
 	align-items: flex-end;
-  }
+}
 
+.fa-share-alt-square,
+.fa-sort,
+.fa-user {
+  font-size: 20px;
+  padding: 0px 6px 1px;
+  color: var(--main-font-color)
+}
 
+.fa-share-alt-square {
+	color: white;
 
+}
+.header-shares {
+	color: white;
+}
 
-
-  .main-page {
+.main-page {
 	padding: 15px;
-  }
+}
 
 
-  .grid {
+.grid {
 	display: -ms-grid;
 	display: grid;
 	-ms-grid-columns: minmax(200px, 1fr) 1rem minmax(200px, 1fr) 1rem
 	  minmax(200px, 1fr) 1rem minmax(200px, 1fr);
 	grid-template-columns: repeat(4, minmax(200px, 1fr));
 	gap: 1rem;
-  }
+}
   
 
-  .card {
-	background-color: #ffffff;
+.card {
+	background-color: white;
 	-webkit-box-shadow: 1px 1px 5px 3px #a5a5a5;
 	box-shadow: 1px 1px 5px 3px #a5a5a5;
 	color: black;
-  }
+}
 
-  .card-image {
+.card-image {
 	-o-object-fit: cover;
 	object-fit: cover;
 	width: 100%;
 	height: 200px;
 	max-width: 100%;
+}
+
+.card-photo-area {
+	max-height: 200px;
+	position: relative;
+}
+
+.card-photo-area-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
+	padding: 12px;
+}
+
+.share-button {
+	display: block;
+	border-radius: 50%;
+	-webkit-transform: scaleX(-1);
+	-ms-transform: scaleX(-1);
+	transform: scaleX(-1);
+	height: 45px;
+	width: 45px;
+	border: none;
+}
+
+.fa-share {
+  font-size: 23px;
+  color: var(--main-font-color);
+}
+
+.card-ranking-section {
+	color: #ffffff;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
+	flex-direction: column;
+}
+
+.card-ranking {
+	font-size: 30px;
+	text-align: right;
+}
+
+.card-content-area {
+	padding: 15px;
+}
+
+.card-description {
+	font-size: 14px;
+	color: #cdcdcd;
+	margin-bottom: 15px;
+}
+
+.card-link-area {
+	border-radius: 3px;
+	background-color: #efefef;
+	padding: 5px;
+	overflow-wrap: break-word;
+}
+
+.card-secondary-text {
+	font-size: 17px;
+	margin-top: 15px;
+	margin-bottom: 5px;
+}
+
+.card-shares {
+	font-size: 30px;
+	color: var(--main-highlight-color);
+	margin-bottom: 8px;
   }
+
